--- a/public/reels.html
+++ b/public/reels.html
@@ -26,7 +26,6 @@
             position: relative;
         }
 
-        /* Хедер */
         .header {
             width: 100%;
             height: 280px;
@@ -91,106 +90,8 @@
             padding-bottom: 100px;
         }
 
+        /* ИСПРАВЛЕНО: Текст теперь виден сразу (opacity: 1) */
         .line {
             font-size: 60px;
             font-weight: 800;
-            color: var(--text-dark);
-            text-transform: uppercase;
-            letter-spacing: -1.5px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .line.visible { opacity: 1; }
-        .line.final { color: var(--risk-red); margin-top: 30px; }
-
-        .cursor-box {
-            position: absolute;
-            bottom: 150px;
-            font-size: 34px;
-            color: var(--text-gray);
-            display: flex;
-            align-items: center;
-        }
-
-        .cursor {
-            width: 4px; height: 45px;
-            background: #007aff;
-            margin-left: 12px;
-            animation: blink 1s infinite;
-        }
-
-        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
-    </style>
-</head>
-<body>
-    <div class="header">
-        <img src="celin.png" alt="Avatar" class="avatar">
-        <div class="contact-info">
-            <div class="contact-name">Celin</div>
-            <div class="status">en ligne</div>
-        </div>
-    </div>
-
-    <div class="chat-area">
-        <div class="bubble me" id="msgMe">...</div>
-        <div class="bubble her" id="msgHer">...</div>
-    </div>
-
-    <div class="diagnosis">
-        <div class="line" id="l1"></div>
-        <div class="line" id="l2"></div>
-        <div class="line" id="l3"></div>
-        <div class="line" id="l4"></div>
-        <div class="line" id="l5"></div>
-        <div class="line final" id="l6">AVANT D’ENVOYER.</div>
-    </div>
-
-    <div class="cursor-box">
-        Analyse de risque en cours<span class="cursor"></span>
-    </div>
-
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        
-        // Наполняем сообщения
-        document.getElementById('msgMe').innerText = params.get('me') || 'On se voit ce soir ?';
-        document.getElementById('msgHer').innerText = params.get('her') || 'Pas maintenant.';
-
-        // Логика для строк диагноза
-        const diagText = params.get('diag');
-        if (diagText) {
-            // Если мы передали весь текст одной строкой с переносами
-            const lines = diagText.split('\n');
-            for (let i = 0; i < 5; i++) {
-                if (lines[i]) document.getElementById('l' + (i + 1)).innerText = lines[i];
-            }
-        } else {
-            // Если передаем по отдельности l1, l2...
-            for (let i = 1; i <= 5; i++) {
-                const val = params.get('l' + i);
-                if (val) document.getElementById('l' + i).innerText = val;
-            }
-        }
-
-        // Плавное появление строк
-        function revealLines() {
-            for (let i = 1; i <= 6; i++) {
-                setTimeout(() => {
-                    const el = document.getElementById('l' + i);
-                    if (el && el.innerText.trim() !== "") {
-                        el.classList.add('visible');
-                    } else if (i === 6) { 
-                        el.classList.add('visible'); // Финальная красная строка всегда видна
-                    }
-                }, i * 600);
-            }
-        }
-
-        window.onload = () => {
-            setTimeout(revealLines, 500);
-        };
-    </script>
-</body>
-</html>
-
+            color
